--- a/src/my-app.html
+++ b/src/my-app.html
@@ -68,6 +68,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         box-shadow: 0 3px 15px 0 rgba(0, 0, 0, .15);
         padding-top:10px;
       }
+      header nav{
+        justify-content: center;
+        align-content: center;
+        position: relative;
+      }
+      header nav a{
+        position: absolute;
+        right: 20px;
+        margin-top:20px;
+        color:white;
+        text-decoration: none;
+      }
       nav.menu img{
         width:60px;
         
@@ -99,6 +111,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <header>
         <nav class="menu ">
           <img src="../images/landing/chaticon.png" alt="chatbot">
+          <a href="[[rootPath]]view1">Configura tu Chatbot</a>
         </nav>
       </header>
       <!-- Main content -->
