--- a/src/my-view4.html
+++ b/src/my-view4.html
@@ -58,14 +58,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </section>
         <section class="clientes">
             <img src="/images/landing/image-chat.png" alt="">
-            <h2>Chatbot para generación de leads</h2>
-            <p class="text"> <strong>Ironchat</strong> asegura una mayor cantidad de registros y ayuda a conseguir
-                nuevos clientes. Atraiga clientes potenciales online con el chatbot. Simplifique el proceso de compra
-                respondiendo a preguntas las 24 horas del día, 7 días a la semana, y ofreciendo ayuda con problemas,
-                terminología, beneficios, políticas, sugerencias personalizadas, descuentos, promociones y más.</p>
-            <div class="button-containe">
-                <a href="">Registrarme</a>
+            <div class="container">
+                <h2>Chatbot para generación de leads</h2>
+                <p class="text"> <strong>Ironchat</strong> asegura una mayor cantidad de registros y ayuda a conseguir
+                    nuevos clientes. Atraiga clientes potenciales online con el chatbot. Simplifique el proceso de
+                    compra
+                    respondiendo a preguntas las 24 horas del día, 7 días a la semana, y ofreciendo ayuda con
+                    problemas,
+                    terminología, beneficios, políticas, sugerencias personalizadas, descuentos, promociones y más.</p>
+                <div class="button-containe">
+                    <a href="">Registrarme</a>
+                </div>
             </div>
+
         </section>
     </template>
 
