--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -163,12 +163,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           width: 80%;
         }
         section.pilares{
-          padding:50px 20px;
+          padding:60px 20px;
+          height: 60vh;
         }
         section.pilares .container-pilares{
           display: flex;
           justify-content: space-around;
+          align-items: end;
+        }
+        section.pilares .container-pilares .pilar{
+          width: 33%;
+        }
+        section.clientes{
+          display: flex;
+          justify-content: center;
           align-items: center;
+          flex-direction: row-reverse
         }
 
 
