--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -146,9 +146,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 18px;
         text-decoration: none;
         font-weight: bold;
-        border-radius: 40px;
+        border-radius: 40px; 
         border: 1px solid transparent;
       }
+
+
+      .container-demo {
+        width: 100%;
+      }
+
+
 
       @media only screen and (min-width: 600px) {
         section.section-slide {
@@ -156,32 +163,84 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           justify-content: space-between;
           align-items: center;
         }
-        .img-conatainer{
+
+        .img-conatainer {
           text-align: center;
         }
+
         .img-conatainer img {
           width: 80%;
         }
-        section.pilares{
-          padding:60px 20px;
-          height: 60vh;
+
+        section.pilares {
+          padding: 55px 20px;
         }
-        section.pilares .container-pilares{
+
+        section.pilares .container-pilares {
           display: flex;
           justify-content: space-around;
           align-items: end;
         }
-        section.pilares .container-pilares .pilar{
+
+        section.pilares .container-pilares .pilar {
           width: 33%;
         }
-        section.clientes{
+
+        section.clientes {
           display: flex;
           justify-content: center;
           align-items: center;
           flex-direction: row-reverse
         }
 
+      }
 
+      @media only screen and (min-width: 900px) {
+        section.section-slide h1 {
+          font-size: 4rem;
+        }
+
+        .contaner-text {
+          text-align: center;
+          font-size: 1.5rem;
+          padding: 0px 30px;
+        }
+
+        section.pilares h2 {
+          font-size: 2rem;
+          padding-bottom: 15px;
+        }
+
+        section.pilares .container-pilares {
+          padding-bottom: 50px;
+          height: auto;
+        }
+
+        section.pilares .pilar .title {
+          font-size: 1.25rem;
+
+        }
+
+        section.pilares .pilar .description {
+          margin-top: 10px;
+          font-size: 1.1rem;
+        }
+
+        section.clientes{
+          padding: 20px 30px;
+        }
+        section.clientes h2 {
+          font-size: 2.4rem;
+        }
+
+        section.clientes .text {
+          font-size: 1.2rem;
+          margin-top:10px;
+          margin-bottom:30px;
+        }
+        section.clientes .container{
+          padding:0px 30px;
+        }
       }
     </style>
   </template>
