--- a/src/my-view4.html
+++ b/src/my-view4.html
@@ -93,7 +93,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         </section>
         <div class="demo">
-            <p>Demo</p>
+            <h2>Demo Ironchat</h2>
             <div class="container-demo">
                 <chat-bot title="Hi I'm a bot" nodes="[[nodes]]"></chat-bot>
             </div>
