--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -146,13 +146,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 18px;
         text-decoration: none;
         font-weight: bold;
-        border-radius: 40px; 
+        border-radius: 40px;
         border: 1px solid transparent;
       }
 
+      div.demo {
+        text-align: center;
+        padding: 0px 10px;
+        padding-top: 30px;
+        padding-bottom:30px;
+      }
+
+      div.demo h2 {
+
+        text-align: center;
+        padding-bottom: 10px;
+
+      }
 
       .container-demo {
-        width: 100%;
+        background: #f9f7ff;
+        color: #181b3a;
       }
 
 
@@ -226,20 +240,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           font-size: 1.1rem;
         }
 
-        section.clientes{
+        section.clientes {
           padding: 20px 30px;
         }
+
         section.clientes h2 {
           font-size: 2.4rem;
         }
 
         section.clientes .text {
           font-size: 1.2rem;
-          margin-top:10px;
-          margin-bottom:30px;
+          margin-top: 10px;
+          margin-bottom: 30px;
         }
-        section.clientes .container{
-          padding:0px 30px;
+
+        section.clientes .container {
+          padding: 0px 30px;
+        }
+        div.demo h2 {
+          font-size:2.2rem;
+        }
+
+        .container-demo {
+          width:40%;
+          margin: auto;
         }
       }
     </style>
